# rust-study

./: README.md
anagram/: Cargo.toml
anagram/src/: lib.rs
brainfuck/: Cargo.toml
brainfuck/src/: lib.rs  main.rs
brainfuck/tests/: brainfuck.rs
cowsay/: Cargo.toml
cowsay/src/: main.rs
grains/: Cargo.toml
grains/benches/: grains.rs
grains/src/: lib.rs
grains/tests/: grains.rs
hello-world/: Cargo.toml  README.md
json/: Cargo.toml
json-bench/: Cargo.toml
json-bench/benches/: bench.rs
json/src/: lib.rs
json/tests/: json.rs
leap/: Cargo.toml  README.md
leap/src/: main.rs
lifegame/: Cargo.toml  README.md  test.lif
lifegame/src/: main.rs
minesweeper/: Cargo.toml
minesweeper/src/: lib.rs
minesweeper/tests/: minesweeper.rs
nth-prime/: Cargo.toml
nth-prime/src/: lib.rs
phone-number/: Cargo.toml
phone-number/src/: lib.rs
phone-number/tests/: phone-number.rs
pig-latin/: Cargo.toml
pig-latin/src/: lib.rs
pig-latin/tests/: pig-latin.rs
protein-translation/: Cargo.toml
protein-translation/src/: lib.rs
raindrops/: Cargo.toml
raindrops/src/: lib.rs
red-black-tree/: Cargo.toml
red-black-tree/benches/: rbtree.rs
red-black-tree/src/: lib.rs
red-black-tree/tests/: rbtree.rs
sieve/: Cargo.toml
sieve/src/: lib.rs
simple-binary-tree/: Cargo.toml
simple-binary-tree/benches/: btree.rs
simple-binary-tree/src/: lib.rs
simple-binary-tree/tests/: btree.rs
simple-linked-list/: Cargo.toml
simple-linked-list/src/: lib.rs
tree/: Cargo.toml
tree/benches/: tree.rs
waf/: Cargo.toml  README.md
wc/: Cargo.toml
(+8 files in other folders)
